Refactor and add prettier

--- a/package.json
+++ b/package.json
@@ -6,17 +6,23 @@
   "sideEffects": false,
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc"
+    "dev": "tsx src/server.ts",
+    "build": "tsc -p tsconfig.json",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "dependencies": {
-    "node": "^24.0.0",
-    "zod": "^3.0.0"
+    "express": "^4.0.0",
+    "node": "^24.0.0"
   },
   "peerDependencies": {
     "openai": "^5.16.0"
   },
   "devDependencies": {
+    "@types/express": "^5.0.3",
     "@types/node": "^24.3.0",
+    "prettier": "3.6.2",
+    "tsx": "^4.20.5",
     "typescript": "^5.0.0"
   },
   "exports": {
